src/App.scss
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");

$colors: (
  background: hsl(270, 20%, 96%),
  Violet: hsl(276, 100%, 81%),
  // sub-heading at the top of the app UI
  Magenta: hsl(293, 100%, 63%),
  Light-Violet: hsl(264, 100%, 61%),
  sender: hsl(276, 55%, 52%),
  receiver: hsl(271, 15%, 43%),
  radio-button-outline: hsl(289, 100%, 72%),
  placeholder: hsl(206, 6%, 79%),
  submit: hsl(271, 36%, 24%),
  heading: hsl(271, 36%, 24%),
  paragraph: hsl(270, 7%, 64%),
);

@mixin backgroundGradient($arg) {
  background: linear-gradient($arg, map-get($colors, Light-Violet), map-get($colors, Magenta));
}

html {
  height: 100%;
  overflow-x: hidden;
}

body {
  position: relative;
  margin: 0;
  background: #fafafa;
  font-family: "Rubik", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  box-sizing: border-box;
  overflow: hidden;
}

::placeholder {
  color: map-get($colors, placeholder);
}

main {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  height: 100dvh;
  overflow: hidden;

  $blob-width: 60rem;
  $blob-lateral: -9.5rem;

  &::before,
  &::after {
    content: "";
    position: absolute;
    z-index: -10;
    width: $blob-width;
    height: 87dvh;

    @media screen and (max-width: 430px) {
      height: 50dvh;
      width: 100dvw;
    }
  }

  &::before {
    top: 0;
    left: $blob-lateral;
    @include backgroundGradient(0deg);
    border-radius: 0 0 50rem 50rem;

    @media screen and (max-width: 430px) {
      left: -25%;
    }
  }

  &::after {
    bottom: 0;
    right: calc($blob-lateral + $blob-lateral + 3.5rem);
    background: #f9f4fa;
    border-radius: 100rem 100rem 0 0;
  }

  @media screen and (max-width: 430px) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow-y: scroll;
    bottom: 0;
  }
}

.phone-section {
  display: grid;
  place-content: center;
  justify-content: end;
  margin-right: 12rem;

  @media screen and (max-width: 376px) {
    margin-top: 16rem !important;
  }

  @media screen and (max-width: 430px) {
    scale: 0.75;
    margin: 0;
    margin-top: 10rem;
  }
}

.phone {
  display: grid;
  place-items: center;
  background: white;
  border: 1rem solid white;
  border-radius: 3rem;
  width: 22rem;
  height: fit-content;
  filter: drop-shadow(1rem 1rem 2rem #00000012);

  .phone-screen {
    display: flex;
    flex-direction: column;
    position: relative;
    border-radius: 2rem;
    overflow: hidden;
    background-color: map-get($colors, background);
    width: 100%;

    .camera-cutout {
      position: absolute;
      top: 0;
      left: 25%;
      right: 25%;
      background: white;
      width: 50%;
      height: 1.5rem;
      border-radius: 0 0 1.25rem 1.25rem;
    }

    .contact-header {
      display: grid;
      grid-template-columns: repeat(2, auto);
      align-items: center;
      color: white;
      @include backgroundGradient(90deg);
      padding-top: 1.5rem;
      border-radius: 0 0 0.5rem 0.5rem;

      .contact-info-container {
        display: flex;
        align-items: center;
        padding: 1rem;

        img {
          border: 2px solid white;
          border-radius: 100dvw;
          width: 2.25rem;
        }

        .container-name-status {
          display: grid;
          grid-template-columns: repeat(1, 1fr);
          margin-left: 1rem;

          .contact-status {
            opacity: 0.5;
            font-size: 12px;
          }
        }
      }

      .more-section {
        display: flex;
        justify-content: center;
      }
    }

    .phone-body {
      padding: 1rem;
      padding-bottom: 0;

      .received-messages-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 1rem;

        .received-message {
          background: #ede4f4;
          color: map-get($colors, sender);
          border-bottom-left-radius: 0.3rem !important;
        }
      }

      .sent-messages-container {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        gap: 1rem;
        margin-block: 1rem;

        .sent-message {
          background: white;
          color: map-get($colors, receiver);
          border-bottom-right-radius: 0.3rem !important;
          filter: drop-shadow(0rem 0.25rem 0.25rem #00000012);
        }
      }

      .sent-images {
        display: flex;
        justify-content: flex-end;
        gap: 1rem;

        img {
          width: 4rem;
          border-radius: 1rem;
          transition: 250ms ease;
          cursor: pointer;

          &:hover {
            scale: 1.1;
          }
        }
      }

      .services-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 1rem;
        margin-top: 1rem;

        .services-bubble {
          display: flex;
          justify-content: space-between;
          align-items: center;
          color: white;
          @include backgroundGradient(270deg);
          border-radius: 0.75rem;
          border-bottom-left-radius: 0.25rem;
          padding: 0.75rem;
          width: 70%;

          div {
            display: flex;
            align-items: center;
            align-content: center;
            font-size: 12px;

            input {
              margin: 0;
            }

            label {
              padding-inline: 0.5rem;
              font-size: 12px;
            }
          }

          span {
            font-weight: 600;
            padding-inline: 1rem;
          }
        }
      }
    }

    .message-box {
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      width: calc(100% - 2rem);
      padding: 1rem;
      z-index: 10;
      background: map-get($colors, background);

      input {
        width: 100%;
        height: 3rem;
        border-radius: 1000rem;
        border: none;
        padding-left: 1.5rem;
      }

      button {
        position: absolute;
        display: grid;
        place-items: center;
        right: 1.25rem;
        border: none;
        border-radius: 100dvw;
        cursor: pointer;
        height: 2.5rem;
        width: 2.5rem;
        background-color: map-get($colors, submit);

        &:hover {
          filter: brightness(1.5);
          transition: 250ms ease-in-out;
        }

        svg {
          fill: white;
        }
      }
    }
  }
}

.hero {
  display: grid;
  place-content: center;
  align-items: start;
  justify-content: start;

  @media screen and (max-width: 430px) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    // scale: 0.75;
    width: 100%;
    padding-bottom: 2rem;
  }

  .title {
    font-size: 4rem;
    font-weight: 500;
    color: map-get($colors, heading);
    margin: 0;

    @media screen and (max-width: 430px) {
      font-size: 3rem;
    }
  }

  .summary {
    color: map-get($colors, paragraph);
    width: 42rem;
    font-size: 1.5rem;
    line-height: 1.75;

    @media screen and (max-width: 376px) {
      font-size: 16px !important;
      width: 22rem !important;
      margin-inline: 72rem !important;
      padding-inline: 1rem !important;
    }

    @media screen and (max-width: 430px) {
      font-size: 17px;
      text-align: center;
      width: 21rem;
    }
  }
}

.received-message,
.sent-message {
  max-width: 54%;
  border-radius: 1rem;
  font-size: 12px;
  padding: 0.75rem;
  margin: 0;
}

.MuiSvgIcon-root,
input[type="radio"] {
  cursor: pointer;

  &:hover {
    transition: 250ms ease all;
    scale: 1.1;
  }
}

@mixin slide-top($index) {
  .slide-top#{$index} {
    animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
    animation-delay: #{($index - 1) * 2}s;
  }
}

@for $i from 1 through 5 {
  @include slide-top($i);
}

@keyframes slide-top {
  0% {
    transform: translateY(1000px);
  }
  100% {
    transform: translateY(0);
  }
}

